<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student_Frisbee_Techniques">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView180"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Frisbee Throws"
        android:textColor="@color/Black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView183"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:lineSpacingExtra="8dp"
        android:text="The three most used throws in Ultimate are the backhand, forehand, and hammer throw. Know them and practice them for they are the most useful throws in a competitive environment."
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView180" />

    <TextView
        android:id="@+id/textView184"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/frisbee_backhand"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView183" />

        <TextView
            android:id="@+id/textView185"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="8dp"
            android:text="The easiest and probably most commonly used throw. It is the most generic and natural way to throw a disc. You will put four fingers in the cup of the disc with your thumb on top. If you are a righty you would stand straight up, twist to the left, bend your wrist and elbow in front of you so they are in front of the disc. Then un-do all of that in one steady motion releasing the disc. Try to keep the disc as level as possible and to give it spin. Remember that most of the spin comes from bending your wrist then snapping it. I exaggerated the throw by pulling back far and extending my arm after the throw to help show the motion. As you get better you will use less wind-up and less extension. Backhand can be used for short, medium, and long-range passing."
            android:textColor="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView184" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/frisbeebackhand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView185" />

        <TextView
            android:id="@+id/textView186"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/frisbee_forehand"
            android:textColor="@color/Black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

        <TextView
            android:id="@+id/textView187"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/frisbee_forehandthrow"
            android:textColor="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView186" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/frisbeeforehand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView187" />

        <TextView
            android:id="@+id/textView188"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/frisbee_hammerthrow"
            android:textColor="@color/Black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gifImageView1" />

        <TextView
            android:id="@+id/textView189"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="8dp"
            android:text="Very useful when the time is right. The hammer throw can be lofted over the defense and landed directly onto the intended teammate. It is also good when someone is marking you hard and nearing the end of the stall count. You can easily throw is over the marker if need be. To throw a hammer (righty) simply pretend like you are throwing an axe. First, hold the disc with your pointer and middle finger on the inner side of the disc, your thumb on the other side. (It is typically held the same way as a Flick. The top of the disc should be facing your left side. Tilt the top of the disc slightly to the left side to give it an angle. Pull back and release the disc when it gets even with your forehead, keep your elbow bent at all times. If done right the disc should start out tilted and slowly turn upside-down. The disc should land completely upside down on its face because it makes it more predictable and easier to catch for you teammate. If the disc corkscrews then you are probably throwing at too much of an angle for for that particular distance. You should use less tilt for far ranges and more for short ranges. Good for all ranges but works best at medium-range."
            android:textColor="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView188" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/frisbeehammerthrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView189" />

        <TextView
            android:id="@+id/textView190"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textSize="20dp"
            android:textColor="@color/Black"
            android:text="Here's a video about frisbee throwing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gifImageView2"/>

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/youTube_frisbeeSkills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView190" />

        <Button
            android:id="@+id/btn_frisbeeSkills_Play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="Play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youTube_frisbeeSkills" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>